feat(pos): Highlight selected table in layout
Adds visual feedback to indicate which table is currently selected in the POS table layout. This improves user experience by making it clearer which table is active.

--- a/src/components/pos/pos.component.html
+++ b/src/components/pos/pos.component.html
@@ -45,6 +45,7 @@
           [tables]="tables()"
           [isEditMode]="isEditMode()"
           [employeeNameMap]="employeeNameMap()"
+          [selectedTable]="selectedTable()"
           (tableClicked)="handleTableClicked($event)"
           (tableRightClicked)="handleTableRightClick($event)">
         </app-table-layout>
