--- a/src/components/shared/pre-bill-modal/pre-bill-modal.component.html
+++ b/src/components/shared/pre-bill-modal/pre-bill-modal.component.html
@@ -29,7 +29,13 @@
         </div>
         
         <div class="space-y-2 pt-4 border-t border-gray-600">
-            <div class="flex justify-between text-lg"><span class="text-gray-300">Subtotal</span><span>{{ orderSubtotal() | currency:'BRL' }}</span></div>
+            <div class="flex justify-between text-lg"><span class="text-gray-300">Subtotal</span><span>{{ orderSubtotalBeforeDiscount() | currency:'BRL' }}</span></div>
+            @if (globalDiscountAmount() > 0) {
+              <div class="flex justify-between text-lg">
+                <span class="text-red-400">Desconto</span>
+                <span class="text-red-400">- {{ globalDiscountAmount() | currency:'BRL' }}</span>
+              </div>
+            }
             <div class="flex justify-between items-center text-lg">
                 <div class="flex items-center gap-2">
                     <span class="text-gray-300">Taxa de Serviço (10%)</span>
@@ -70,7 +76,7 @@
       <div class="p-4 bg-gray-900/50 flex justify-end gap-3 border-t border-gray-700">
         <button (click)="closeModal.emit()" class="px-6 py-2 font-medium rounded-lg bg-gray-600 hover:bg-gray-500 text-white">Fechar</button>
         <button (click)="printPreBill()" class="px-6 py-2 font-bold rounded-lg bg-blue-600 hover:bg-blue-500 text-white flex items-center gap-2">
-           <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M6.72 13.829c-.24.03-.48.062-.72.096m.72-.096a42.415 42.415 0 0110.56 0m-10.56 0L6 3.129M6.72 13.829L6 3.129m0 10.7a48.45 48.45 0 0112 0m-12 0v.042m12 0v-.042m0 10.704l.72-10.7M17.28 13.829c.24.03.48.062.72.096m-.72-.096L18 3.129m-1.2 10.7l.72-10.7m0 10.7a48.45 48.45 0 00-12 0m12 0v.042m-12 0v-.042" /></svg>
+           <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M6.72 13.829c-.24.03-.48.062-.72.096m.72-.096a42.415 42.415 0 0110.56 0m-10.56 0L6 3.129M6.72 13.829L6 3.129m0 10.7a48.45 48.45 0 0112 0m-12 0v.042m12 0v-.042m0 10.704l.72-10.7M17.28 13.829c.24.03.48.062-.72.096m-.72-.096L18 3.129m-1.2 10.7l.72-10.7m0 10.7a48.45 48.45 0 00-12 0m12 0v.042m-12 0v-.042" /></svg>
            Imprimir
         </button>
       </div>
