--- a/src/components/inventory/inventory-overview/inventory-overview.component.html
+++ b/src/components/inventory/inventory-overview/inventory-overview.component.html
@@ -5,7 +5,7 @@
     <input 
       type="text" 
       [value]="searchTerm()" 
-      (input)="searchTerm.set($any($event).target).value)"
+      (input)="searchTerm.set($any($event.target).value)"
       placeholder="Buscar ingrediente pelo nome..." 
       class="w-full bg-gray-800 border border-gray-700 rounded-lg pl-10 pr-4 py-2 text-white placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-500">
     <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
