fix(portioning): Correct ngModel binding for input quantity
Updates the `ngModel` binding in the portioning component to directly use `$event` instead of `$any($event.target).value`. This simplifies the event handling and ensures correct data binding for the input quantity.

--- a/src/components/inventory/portioning/portioning.component.html
+++ b/src/components/inventory/portioning/portioning.component.html
@@ -79,7 +79,7 @@
                 </div>
                 <div>
                     <label class="block text-sm font-medium text-gray-300 mb-1">Quantidade a Usar *</label>
-                    <input type="number" [ngModel]="form().input_quantity" (ngModelChange)="updateFormValue('input_quantity', +$any($event.target).value)" name="input_quantity" class="w-full bg-gray-700 rounded p-2 text-white">
+                    <input type="number" [ngModel]="form().input_quantity" (ngModelChange)="updateFormValue('input_quantity', +$event)" name="input_quantity" class="w-full bg-gray-700 rounded p-2 text-white">
                 </div>
             </div>
           </section>
